@@ -3,15 +3,15 @@
     /* OSWA Codeine
      * @author BreathLess
      * @type Codeine Driver
-     * @description: Deferred Executor
+     * @description: Updater Executor
      * @package Codeine
      * @subpackage Drivers
      * @version 0.1
-     * @date 24.11.10
-     * @time 1:08
+     * @date 01.12.10
+     * @time 14:07
      */
 
     self::Fn('Run', function ($Call)
     {
-        return $Call;
+        // TODO Updater
     });
