@@ -1,1 +1,9 @@
-+Code/Runners/Merge
++ Code/Runners/Merge
+T Code/Executors/Update
+T Code/Executors/Install
+T Code/Executors/Uninstall
+M Code/Executors/Test
+M Code/Executors/Profile
+M Code/Executors/Dump
+T Data Straight Operations
+T Dependency Check
